# slope-area

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/: outlets.shp  outlets.shx
data/raw/: copdem_30m.tif  copdem_30m_outlets.dbf  copdem_30m_outlets.qmd  copdem_30m_outlets.shp  copdem_30m_outlets.shx  outlets.dbf  outlets.shp  outlets.shx
logging/: config.json
notebooks/: 00_minimal_example.ipynb  01_plot_from_outlets.ipynb  02_internal_example.ipynb  03_custom_slope_providers.ipynb  custom_slope_providers.py  example.ipynb
scripts/: compute_slope_gradient.py
slope_area/: __init__.py  __main__.py  _typing.py  builder.py  config.py  console.py  enums.py  features.py  geomorphometry.py  hydro.py  logger.py  paths.py  plot.py  trial.py  utils.py
slope_area/_internal/: dem.py
tests/: test_env.py  test_hydro.py
tests/data/: dem.tif  outlet.dbf  outlet.shp  outlet.shx
